--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jarvis-engine",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,13 +10,18 @@
   "author": "Bawazier Murphy",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-basic-auth": "^1.2.1",
     "express-validator": "^7.0.1",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.7.2",
+    "uuid": "^9.0.1",
     "whatsapp-web.js": "^1.23.0"
   }
 }
